2004-02-18  Peter Spjuth  <peter.spjuth@space.se>

	* tests/grid.test:
	* generic/tkGrid.c: Fixed a bug in grid geometry calculations for
	a shrinking grid. [Bug 899246]

2004-02-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkBind.c (HandleEventGenerate): only modify root[xy]
	with [xy] when they haven't been otherwise set.

	* doc/checkbutton.n: TIP#110 implementation
	* doc/radiobutton.n: Tristate Checkbutton and Radiobuttons
	* generic/tkButton.c:
	* generic/tkButton.h:
	* library/demos/check.tcl:
	* library/demos/radio.tcl:
	* macosx/tkMacOSXButton.c:
	* macosx/tkMacOSXDefault.h:
	* tests/button.test:
	* unix/tkUnixButton.c:
	* unix/tkUnixDefault.h:
	* win/tkWinButton.c:
	* win/tkWinDefault.h:

2004-02-17  Don Porter	<dgp@users.sourceforge.net>

	* tests/imgPhoto.test (imgPhoto-16.1):	Corrected incorrect
	variable name [Bug 899010].

2004-02-15  Jim Ingham  <jingham@apple.com>

	* tkMacOSXDialog.c (MatchOneType): If the Macintosh filetype
	is 0, then automatically pass the fileType check.

	* tkMacOSXCarbonEvents.c: New file - this doesn't do anything
	yet - just registers for a couple of App Events.

	* tkMacOSXInit.c (TkpInit.c): Call TkMacOSXInitCarbonEvents.c.
	
	* tkMacOSXAppInit.c: Formatting cleanups.
	* tkMacOSXButton.c: Ditto
	* tkMacOSXClipboard.c: Ditto
	* tkMacOSXDebug.c: Ditto
	* tkMacOSXDialog.c: Ditto
	* tkMacOSXDraw.c: Ditto
	* tkMacOSXEvent.c: Ditto
	* tkMacOSXFont.c: Ditto
	* tkMacOSXHLEvents.c: Ditto
	* tkMacOSXInit.c: Ditto
	* tkMacOSXInt.h
	* tkMacOSXKeyEvent.c: Ditto
	* tkMacOSXMenu.c: Ditto
	* tkMacOSXMenubutton.c: Ditto
	* tkMacOSXMouseEvent.c: Ditto
	* tkMacOSXNotify.c: Ditto
	* tkMacOSXScale.c: Ditto
	* tkMacOSXScrlbr.c: Ditto
	* tkMacOSXSubwindows.c: Ditto
	* tkMacOSXWindowEvent.c: Ditto
	* tkMacOSXWm.c: Ditto

2004-02-13  Jim Ingham  <jingham@apple.com>

	* tkMacOSXDialog.c (Tk_GetOpenFileObjCmd): Use CFStringRef for
	title & message options, not pascal strings.
	(Tk_GetSaveFileObjCmd): Ditto
	(Tk_ChooseDirectoryObjCmd): Ditto